--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
   "dependencies": {
     "include-media": "~1.4.9",
     "jquery": "~2.2.4",
-    "normalize.css": "~5.0.0"
+    "normalize.css": "~5.0.0",
+    "video.js": "^6.2.4",
+    "videojs": "^1.0.0"
   }
 }
