--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jquery": "~2.2.4",
     "normalize.css": "~5.0.0",
     "owl.carousel": "^2.2.0",
+    "seethru": "^3.0.0",
     "vide": "^0.5.1",
     "video.js": "^6.2.4",
     "videojs": "^1.0.0"
