--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@fancyapps/fancybox": "^3.1.20",
     "include-media": "~1.4.9",
     "jquery": "~2.2.4",
+    "native-slide-toggle": "^1.1.3",
     "normalize.css": "~5.0.0",
     "owl.carousel": "^2.2.0",
     "seethru": "^3.1.1",
