--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "@fancyapps/fancybox": "^3.1.20",
     "include-media": "~1.4.9",
+    "is-in-viewport": "^3.0.0",
     "jquery": "~2.2.4",
     "native-slide-toggle": "^1.1.3",
     "normalize.css": "~5.0.0",
