corrected video and paralax

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "native-slide-toggle": "^1.1.3",
     "normalize.css": "~5.0.0",
     "owl.carousel": "^2.2.0",
+    "parallaxify": "^0.1.1",
     "seethru": "^3.1.1",
     "vide": "^0.5.1",
     "video.js": "^6.2.4",
