add 3 last pages

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "normalize.css": "~5.0.0",
     "owl.carousel": "^2.2.0",
     "parallaxify": "^0.1.1",
+    "scrollreveal": "^3.3.6",
     "seethru": "^3.1.1",
     "vide": "^0.5.1",
     "video.js": "^6.2.4",
